<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".Kumpulan_Rumus"
                android:background="@drawable/buku">

    <TableLayout
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:id="@+id/tableLayout">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnLayang"
                    android:id="@+id/btnLayang" android:layout_column="0" android:textStyle="bold|italic"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnKetupat"
                    android:id="@+id/btnKetupat" android:layout_column="0"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnGenjang"
                    android:id="@+id/btnGenjang" android:layout_column="0"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnTiga"
                    android:id="@+id/btnTiga"
                    android:layout_column="0"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnPersegi"
                    android:id="@+id/btnPerSegi" android:layout_column="0"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnPanjang"
                    android:id="@+id/button6" android:layout_column="0"/>
        </TableRow>
    </TableLayout>
    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/tableLayout" android:layout_toEndOf="@+id/tableLayout">
    </FrameLayout>
</RelativeLayout>
